[package]
name = "websockets"
version = "1.0.0"
description = "Implementation of IETF RFC 6455, The WebSocket Protocol"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["web-programming"]
keywords = ["websocket", "web"]
repository = "https://github.com/rhymu8354/WebSockets.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt"
]

[dependencies]
async-mutex = "1.4"
base64 = "0.13"
futures = "0.3"
rand = "0.7"
sha1 = "0.6"
rhymuweb = "1.1"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
async-ctrlc = "1.2"
async-std = "1.6"
futures-timer = "3.0"
rhymuri = "1.2"
rhymuweb-client = { path = "../HttpClient" }
rhymuweb-server = { path = "../HttpServer" }
structopt = "0.3"
